Update introduction with new bio content

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@ layout: homepage
 <div class="row">
     <div class="col-md-7">
     <div class="block"></div>
-      <p>Hello I'm Meghana Sunil!! </p>
-      <p>I'm a B.Tech Computer Science and Engineering (Data Science) student at VIT Chennai, working under the guidance of <a href="#">Dr. Joe Dhanith</a> on machine learning, domain generalization, and multimodal representation learning. I've gained experience as a Machine Learning Research Intern at the Center for Neuroinformatics, as a Software Development Engineer and Computer Vision Engineer with SpoRIC, and as a Machine Learning Intern at MulticoreWare Inc., where I worked on optimized CNNs, quantized deep learning models, and deployment-ready transformer pipelines.</p>
-      <p>Outside academics, I'm deeply involved in cultural and creative work on campus. I lead major cultural events and serve as President of the university's dance club, where I choreograph, perform, and build spaces for artistic expression.</p>
+      <p>Hi, I'm Meghana!</p>
+      <p>I'm a B.Tech student in Computer Science and Engineering (Data Science) at VIT University, where I am advised by Dr. Joe Dhanith. My research focuses on large multimodal models for reasoning, spanning representation learning, domain generalization, and cross-modal intelligence. I'm broadly interested in how multimodal systems learn structure across vision, language, and neural signals, and how these models become more robust, interpretable, and adaptable.</p>
+      <p>Currently, I'm a Machine Learning Intern at Nagasaki University advised by Dr. Muthu Subash Kavitha, where I work on improving implicit reasoning in large multimodal models. In parallel, I also work with Dr. Min Xu at the Xu Lab at Carnegie Mellon University on multimodal learning and medical AI, focusing on EEG–fNIRS fusion through state-space–based sequence modeling. Prior to this, I was a Machine Learning Intern at MulticoreWare Inc., where I worked on model optimization and post-training quantization, and on finetuning large-scale transformers for efficient deployment. I also interned at the Center for Neuroinformatics with Dr. Jeetashree Aparajita, where I worked on multimodal EEG–fNIRS learning fusion pipelines for cognitive stress analysis. I am a recipient of the Raman Research Award at VIT for my research contributions.</p>
+      <p>Outside of academics, I love dancing. I lead major cultural events on campus and serve as President of VITc's dance club, where I choreograph, perform, and build spaces for artistic expression.</p>
 
       <p><a href="mailto:meghanaa.sunil@gmail.com"><u>email</u></a> / <a href="https://www.linkedin.com/in/meghana-sunil"><u>linkedin</u></a> / <a href="https://github.com/meghanaasunil"><u>github</u></a></p>
     </div>
