Update selected works: add contrastive, CNI (EEG-fNIRS), and RAG survey; update research images

--- a/index.html
+++ b/index.html
@@ -47,5 +47,18 @@ layout: homepage
     </div>
 </div>
 
+<div class="row" style="margin-bottom: 30px;">
+    <div class="col-md-4">
+        <img src="/assets/img/research/rag-survey.jpg" alt="RAG Survey Architecture" style="max-width: 100%; height: auto;">
+    </div>
+    <div class="col-md-8">
+        <h4><strong>Rethinking Knowledge Retrieval for Generation: A Survey on RAG Architectures and Applications</strong></h4>
+        <p><strong>Meghana Sunil</strong></p>
+        <p><i>Submitted: Artificial Intelligence Review</i> | Advisor: Dr. Joe Dhanith</p>
+        <p>A systematic, comprehensive survey of RAG methods characterized through a four-tier architectural taxonomy, clarifying how retrieval design choices shape downstream generation behavior across applications.</p>
+        <p>[<a href="#">Paper</a>] [<a href="#">Code</a>]</p>
+    </div>
+</div>
+
 <p>For more research work, please visit my <a href="/research">Research</a> page.</p>
 
