Replace RAG survey with lung-cancer paper (TOC) in selected works

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@ layout: homepage
 
 <div class="row" style="margin-bottom: 30px;">
     <div class="col-md-4">
-        <img src="/assets/img/research/rag-survey.jpg" alt="RAG Survey Architecture" style="max-width: 100%; height: auto;">
+        <img src="/assets/img/research/lung-cancer.jpg" alt="Lung Cancer Diagnosis Architecture" style="max-width: 100%; height: auto;">
     </div>
     <div class="col-md-8">
-        <h4><strong>Rethinking Knowledge Retrieval for Generation: A Survey on RAG Architectures and Applications</strong></h4>
+        <h4><strong>Encouraging Discriminative Attention Through Contrastive Explainability Learning for Lung Cancer Diagnosis</strong></h4>
         <p><strong>Meghana Sunil</strong></p>
-        <p><i>Submitted: Artificial Intelligence Review</i> | Advisor: Dr. Joe Dhanith</p>
-        <p>A systematic, comprehensive survey of RAG methods characterized through a four-tier architectural taxonomy, clarifying how retrieval design choices shape downstream generation behavior across applications.</p>
+        <p><i>IEEE Access</i> | Advisor: Dr. Natarajan B</p>
+        <p>Enforcing contrastive constraints on attention maps improves both classification performance and attribution consistency, showing that explanation-guided objectives can regulate feature selection.</p>
         <p>[<a href="#">Paper</a>] [<a href="#">Code</a>]</p>
     </div>
 </div>
