--- a/research.html
+++ b/research.html
@@ -31,7 +31,7 @@ layout: homepage
     <div class="col-md-8">
         <h4><strong>Contrastive Learning Under Domain Shift: Do Positive Pairs Help or Hurt Robustness?</strong></h4>
         <p><strong>Meghana Sunil</strong></p>
-        <p><i>In Progress</i> | Advisor: <a href="https://chennai.vit.ac.in/member/dr-joe-dhanith-p-r/" class="intro-link"><strong>Dr. Joe Dhanith</strong></a></p>
+        <p><i>In Progress</i></p>
         <p>Positive pairs aren't universally beneficial under domain shift—robustness increases only when their influence adapts to classifier confidence.</p>
         <p>[<a href="#">Paper</a>] [<a href="#">Code</a>]</p>
     </div>
@@ -44,7 +44,7 @@ layout: homepage
     <div class="col-md-8">
         <h4><strong>A Lightweight Continual Learning Approach via Retrieval-Augmented Generation for Personalized AI Assistants</strong></h4>
         <p><strong>Meghana Sunil</strong></p>
-        <p><i>In Progress</i> | Advisor: <a href="https://chennai.vit.ac.in/member/dr-joe-dhanith-p-r/" class="intro-link"><strong>Dr. Joe Dhanith</strong></a></p>
+        <p><i>In Progress</i></p>
         <p>Personalization without retraining: external retrieval alone drives continual adaptation in lightweight AI assistants.</p>
         <p>[<a href="#">Paper</a>] [<a href="#">Code</a>]</p>
     </div>
@@ -57,7 +57,7 @@ layout: homepage
     <div class="col-md-8">
         <h4><strong>Graph-Guided Cross-Modal Representation Learning of EEG–fNIRS via Spatio-Temporal Transformers for Stress Analysis</strong></h4>
         <p><strong>Meghana Sunil</strong></p>
-        <p><i>Submitted: <span class="journal-title">Computer Methods and Programs in Biomedicine</span></i> | Advisor: <a href="https://chennai.vit.ac.in/member/dr-jeetashree-aparajeeta/" class="intro-link"><strong>Dr. Jeetashree Aparajita</strong></a></p>
+        <p><i>Submitted: <span class="journal-title">Computer Methods and Programs in Biomedicine</span></i></p>
         <p>Cross-modal stress classification benefits from explicitly modeling EEG–fNIRS structural dependencies, where graph-guided fusion yields more reliable spatio-temporal representations.</p>
         <p>[<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5564927">Paper</a>] [<a href="https://github.com/meghanaasunil/CM-GGT">Code</a>]</p>
     </div>
@@ -70,7 +70,7 @@ layout: homepage
     <div class="col-md-8">
         <h4><strong>Rethinking Knowledge Retrieval for Generation: A Survey on RAG Architectures and Applications</strong></h4>
         <p><strong>Meghana Sunil</strong></p>
-        <p><i>Submitted: <span class="journal-title">Artificial Intelligence Review</span></i> | Advisor: <a href="https://chennai.vit.ac.in/member/dr-joe-dhanith-p-r/" class="intro-link"><strong>Dr. Joe Dhanith</strong></a></p>
+        <p><i>Submitted: <span class="journal-title">Artificial Intelligence Review</span></i></p>
         <p>A systematic, comprehensive survey of RAG methods characterized through a four-tier architectural taxonomy, clarifying how retrieval design choices shape downstream generation behavior across applications.</p>
         <p>[<a href="#">Paper</a>] [<a href="#">Code</a>]</p>
     </div>
@@ -83,7 +83,7 @@ layout: homepage
     <div class="col-md-8">
         <h4><strong>Encouraging Discriminative Attention Through Contrastive Explainability Learning for Lung Cancer Diagnosis</strong></h4>
         <p><strong>Meghana Sunil</strong></p>
-        <p><i><span class="journal-title">IEEE Access</span></i> | Advisor: Dr. Natarajan B</p>
+        <p><i><span class="journal-title">IEEE Access</span></i></p>
         <p>Enforcing contrastive constraints on attention maps improves both classification performance and attribution consistency, showing that explanation-guided objectives can regulate feature selection.</p>
         <p>[<a href="https://ieeexplore.ieee.org/abstract/document/11184753">Paper</a>] [<a href="https://github.com/meghanaasunil/Contrastive-Explainability-Learning-for-Lung-Cancer-Diagnosis">Code</a>]</p>
     </div>
@@ -96,7 +96,7 @@ layout: homepage
     <div class="col-md-8">
         <h4><strong>Self-Attentive Quantile GAN with Causally Grounded Machine Learning for Vocal Biomarker Discovery in Parkinson's Disease Detection</strong></h4>
         <p><strong>Meghana Sunil</strong></p>
-        <p><i><span class="journal-title">IEEE Access</span></i> | Advisor: Dr. Nachiyappan S</p>
+        <p><i><span class="journal-title">IEEE Access</span></i></p>
         <p>Modeling vocal biomarkers through causal priors and quantile-based generative features enhances sensitivity to disease-relevant variations while maintaining interpretability.</p>
         <p>[<a href="https://ieeexplore.ieee.org/abstract/document/11113240">Paper</a>] [<a href="https://github.com/meghanaasunil/Self-Attentive-Quantile-GAN--Discovery-in-Parkinson-s-Disease-Detection">Code</a>]</p>
     </div>
